# WizFi360Contest

./: README.md
c_firmware/: CMakeLists.txt  README.md
c_firmware/examples/: CMakeLists.txt
c_firmware/examples/TLC_Level/: CMakeLists.txt  TLC_Level.c  level.c  mqtt_thing.c
c_firmware/examples/TLC_Pump/: CMakeLists.txt  TLC_Pump.c  mqtt_thing.c
c_firmware/libraries/ADS1115/: CMakeLists.txt
c_firmware/libraries/CMSIS_5/CMSIS/NN/Tests/UnitTest/: requirements.txt
c_firmware/libraries/TLC_Libs/: CMakeLists.txt  mqtt_certificate.h  socket_startup.c  ws2812.c  ws2812.pio.h
c_firmware/libraries/pico-sdk/lib/tinyusb/lib/CMSIS_5/CMSIS/NN/Tests/UnitTest/: requirements.txt
c_firmware/port/aws-iot-device-sdk-embedded-C/inc/: core_mqtt_config.h  mqtt_transport_interface.h
c_firmware/port/aws-iot-device-sdk-embedded-C/src/: mqtt_transport_interface.c
web/aws-iot-device-sdk-js-v2/: README.md  package-lock.json  package.json
web/aws-iot-device-sdk-js-v2/samples/browser/pub_sub/: index.html  index.ts  indexFull.html  package-lock.json  package.json  settings.js
